# short-video-intelligence-dashboard

./: .dockerignore  .editorconfig  .gitignore  CASE_STUDY.md  CHANGELOG.md  Dockerfile  README.md  app.py  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
.streamlit/: config.toml
short_video_intel/: __init__.py  config.py  data.py  metrics.py  theme.py  ui.py
tests/: test_data.py  test_metrics.py
