[project]
name = "short-video-intelligence-dashboard"
version = "0.1.0"
description = "Decision-ready analytics for short-video growth, creators, and virality."
requires-python = ">=3.11"
readme = "README.md"
license = {file = "LICENSE"}

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["data", "assets"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
